--- a/IzvorniKod/projekt/projekt/src/main/resources/application.properties
+++ b/IzvorniKod/projekt/projekt/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+progi.admin.password: $2a$10$7dR1nXFoZCc1I9UMEWxWDO4AIC7CRh66h5O90YlcNk7wo0GqaHoI6
+
+server.error.include-message=always
