Promijenjen sustav upravljanja bazom podataka iz h2 u postgresql

--- a/IzvorniKod/projekt/projekt/src/main/resources/application.properties
+++ b/IzvorniKod/projekt/projekt/src/main/resources/application.properties
@@ -1,7 +1,15 @@
-spring.datasource.url=jdbc:h2:mem:DBNAME
-spring.datasource.driverClassName=org.h2.Driver
-spring.h2.console.enabled=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:mem:DBNAME
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.h2.console.enabled=true
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/SheeshmishiDB
+spring.datasource.username=postgres
+spring.datasource.password=bazepodataka
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.sql.init.mode=always
+#spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
