Incijalne postavke za prvi pokušaj deploy-a.

--- a/IzvorniKod/projekt/projekt/src/main/resources/application.properties
+++ b/IzvorniKod/projekt/projekt/src/main/resources/application.properties
@@ -3,11 +3,20 @@
 #spring.h2.console.enabled=true
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/SheeshmishiDB
+# Port na kojem ce se vrtiti api
+# Obavezno izloziti, ovu varijablu koristi Render
+server.port=${PORT:8080}
+
+# Korijenska putanja ("prefiks") za sve zahtjeve na backend - preporuca se postaviti ovo zbog proxy konfiguracije
+# Ako je npr. u controlleru navedena putanja /test, moci ce joj se pristupiti pomocu putanje /api/test
+server.servlet.context-path=/api
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/sheeshmishidb
 spring.datasource.username=postgres
 spring.datasource.password=bazepodataka
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.driverClassName=${DB_DRIVER:org.postgresql.Driver}
 #spring.sql.init.mode=always
 #spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
