Dodane env. varijable.

--- a/IzvorniKod/projekt/projekt/src/main/resources/application.properties
+++ b/IzvorniKod/projekt/projekt/src/main/resources/application.properties
@@ -11,12 +11,13 @@ server.port=${PORT:8080}
 # Ako je npr. u controlleru navedena putanja /test, moci ce joj se pristupiti pomocu putanje /api/test
 server.servlet.context-path=/api
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/sheeshmishidb
-spring.datasource.username=postgres
-spring.datasource.password=bazepodataka
+spring.datasource.password=${DB_PASS:bazepodataka}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/sheeshmishidb}
+#spring.datasource.driverClassName=${DB_DRIVER:org.postgresql.Driver}
+
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.datasource.driverClassName=${DB_DRIVER:org.postgresql.Driver}
 #spring.sql.init.mode=always
 #spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
