--- a/IzvorniKod/projekt/projekt/src/main/resources/application.properties
+++ b/IzvorniKod/projekt/projekt/src/main/resources/application.properties
@@ -11,17 +11,19 @@ server.port=${PORT:8080}
 # Ako je npr. u controlleru navedena putanja /test, moci ce joj se pristupiti pomocu putanje /api/test
 server.servlet.context-path=/api
 
-spring.datasource.password=${DB_PASS:bazepodataka}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/sheeshmishidb}
-#spring.datasource.driverClassName=${DB_DRIVER:org.postgresql.Driver}
+spring.datasource.password=RxgA80ApxL8vqmcuyKbstsR5erZfIdli
+spring.datasource.username=sheeshmishidb_user
+spring.datasource.url=jdbc:postgres://dpg-cdqaqvsgqg47to1kcvig-a:5432/sheeshmishidb
+spring.datasource.driverClassName=org.postgresql.Driver
 
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.sql.init.mode=always
 #spring.jpa.defer-datasource-initialization=true
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 progi.admin.password: $2a$10$7dR1nXFoZCc1I9UMEWxWDO4AIC7CRh66h5O90YlcNk7wo0GqaHoI6
 
