--- a/IzvorniKod/Frontend/package.json
+++ b/IzvorniKod/Frontend/package.json
@@ -10,17 +10,18 @@
     "@types/node": "^16.11.65",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+	"bootstrap": "^5.2.2",
     "axios": "^0.24.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
 	"react-router-dom": "^6.4.3",
+	"react-bootstrap": "^2.6.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
-    "http-proxy-middleware": "^2.0.6",
-	"bootstrap": "^5.2.2"
+    "http-proxy-middleware": "^2.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
