Ispravljen hostname u application.properties.

--- a/IzvorniKod/projekt/projekt/src/main/resources/application.properties
+++ b/IzvorniKod/projekt/projekt/src/main/resources/application.properties
@@ -11,7 +11,7 @@ server.port=${PORT:8080}
 # Ako je npr. u controlleru navedena putanja /test, moci ce joj se pristupiti pomocu putanje /api/test
 server.servlet.context-path=/api
 
-spring.datasource.url=jdbc:postgresql://dpg-cdqaqvsgqg47to1kcvig-a:5432/sheeshmishidb
+spring.datasource.url=jdbc:postgresql://dpg-cdqaqvsgqg47to1kcvig-a.frankfurt-postgres.render.com:5432/sheeshmishidb
 spring.datasource.password=RxgA80ApxL8vqmcuyKbstsR5erZfIdli
 spring.datasource.username=sheeshmishidb_user
 spring.datasource.driverClassName=org.postgresql.Driver
