Vraćene postavke za lokalni rad.

--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -11,20 +11,18 @@ server.port=${PORT:8080}
 # Ako je npr. u controlleru navedena putanja /test, moci ce joj se pristupiti pomocu putanje /api/test
 server.servlet.context-path=/api
 
-spring.datasource.url=jdbc:postgresql://dpg-cdqaqvsgqg47to1kcvig-a.frankfurt-postgres.render.com:5432/sheeshmishidb
-spring.datasource.password=RxgA80ApxL8vqmcuyKbstsR5erZfIdli
-spring.datasource.username=sheeshmishidb_user
+spring.datasource.url=jdbc:postgresql://localhost:5432/sheeshmishidb
+spring.datasource.password=bazepodataka
+spring.datasource.username=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=create
 
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.sql.init.mode=always
-#spring.jpa.defer-datasource-initialization=true
-#spring.jpa.properties.hibernate.format_sql=true
+progi.admin.password=$2a$10$7dR1nXFoZCc1I9UMEWxWDO4AIC7CRh66h5O90YlcNk7wo0GqaHoI6
 
-progi.admin.password: $2a$10$7dR1nXFoZCc1I9UMEWxWDO4AIC7CRh66h5O90YlcNk7wo0GqaHoI6
+# Ovo sam nesto isprobavao, nek bude zasad tu, pokusavam napravit slicnu stvar ko na fe s config.json
+progi.origins.url=https://sheeshmishi-fe.onrender.com
 
 server.error.include-message=always
