--- a/IzvorniKod/frontend/src/components/config.json
+++ b/IzvorniKod/frontend/src/components/config.json
@@ -1,4 +1,4 @@
 {
-    "hostname": "https://sheeshmishi.onrender.com/api",
-    "hostname2": "http://localhost:3000/api"
+    "hostname2": "https://sheeshmishi.onrender.com/api",
+    "hostname": "http://localhost:3000/api"
 }
