Dodana osnovna funkcionalnost registracije preko maila, jos treba doraditi

--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -28,3 +28,10 @@ progi.origins.url=https://sheeshmishi-fe.onrender.com
 server.error.include-message=always
 
 spring.sql.init.mode=always
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ivan.kreso1@gmail.com
+spring.mail.password=gplywfnygealquxl
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
