--- a/IzvorniKod/backend/src/main/resources/application.dev.properties
+++ b/IzvorniKod/backend/src/main/resources/application.dev.properties
@@ -1,9 +1,9 @@
 server.port=${PORT:8080}
 server.servlet.context-path=/api
 
-spring.datasource.url=jdbc:postgresql://dpg-cdqaqvsgqg47to1kcvig-a.frankfurt-postgres.render.com:5432/sheeshmishidb
-spring.datasource.password=RxgA80ApxL8vqmcuyKbstsR5erZfIdli
-spring.datasource.username=sheeshmishidb_user
+spring.datasource.url=jdbc:postgresql://localhost:5432/sheeshmishidb
+spring.datasource.password=bazepodataka
+spring.datasource.username=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
