--- a/IzvorniKod/frontend/src/resources/config.json
+++ b/IzvorniKod/frontend/src/resources/config.json
@@ -1,4 +1,7 @@
 {
-    "hostname2": "https://sheeshmishi.onrender.com/api",
-    "hostname": "http://localhost:3000/api"
+    "hostname": {
+        "dev": "http://localhost:3000/api",
+        "prod": "https://sheeshmishi.onrender.com/api"
+    },
+    "profile": "prod"
 }
