--- a/IzvorniKod/frontend/package.json
+++ b/IzvorniKod/frontend/package.json
@@ -20,7 +20,6 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "selenium-webdriver": "^4.7.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
@@ -51,6 +50,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.7",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "selenium-webdriver": "^4.7.1"
   }
 }
