--- a/IzvorniKod/frontend/package.json
+++ b/IzvorniKod/frontend/package.json
@@ -50,7 +50,6 @@
   },
   "devDependencies": {
     "chai": "^4.3.7",
-    "mocha": "^10.2.0",
-    "selenium-webdriver": "^4.7.1"
+    "mocha": "^10.2.0"
   }
 }
