Ureden data.sql za deploy

--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 
 progi.admin.password=$2a$12$VSoT86cH/qxQFEiopIR/COZRH3FU9x/tfDa3etNuZfGk96hBuE/2y
