--- a/IzvorniKod/frontend/src/resources/config.json
+++ b/IzvorniKod/frontend/src/resources/config.json
@@ -3,5 +3,5 @@
         "dev": "http://localhost:3000/api",
         "prod": "https://sheeshmishi.onrender.com/api"
     },
-    "profile": "dev"
+    "profile": "prod"
 }
